--- a/LiteTube/AdMediator.config
+++ b/LiteTube/AdMediator.config
@@ -30,7 +30,7 @@
             <Metadata>
               <Property>
                 <Key>AdUnitId</Key>
-                <Value>11643034</Value>
+                <Value>11685077</Value>
               </Property>
               <Property>
                 <Key>Height</Key>
@@ -47,19 +47,19 @@
             <Metadata>
               <Property>
                 <Key>Adspace</Key>
-                <Value>130168472</Value>
+                <Value>130193180</Value>
               </Property>
             </Metadata>
             <Name>Smaato</Name>
           </AdAdapterInfo>
         </AdAdapters>
-        <Id>AdMediator-Id-C5047D00-4321-4095-A379-3B9EA68B22A6</Id>
-        <Name>AdMediator_F3EEB8</Name>
+        <Id>AdMediator-Id-CD5E3AAB-D49E-4967-BD9F-F9D88102700A</Id>
+        <Name>AdMediator_All</Name>
       </AdControlConfiguration>
     </AdControlConfigurations>
   </BaseConfiguration>
   <RefreshRate>30</RefreshRate>
   <SchemaVersion>2.0.1</SchemaVersion>
-  <UpdatedDateTime>2016-09-03T17:40:11.9397031Z</UpdatedDateTime>
+  <UpdatedDateTime>2017-05-27T10:50:55.4545771Z</UpdatedDateTime>
   <UseRoundRobin>true</UseRoundRobin>
 </AdMediatorConfiguration>
