--- a/SM.Media.Core/SM.Media.Core.csproj
+++ b/SM.Media.Core/SM.Media.Core.csproj
@@ -471,6 +471,7 @@
     <Compile Include="Utility\TplTaskExtensions.cs" />
     <Compile Include="Utility\WorkBuffer.cs" />
     <Compile Include="Utility\WorkBufferBlockingPool.cs" />
+    <Compile Include="VideoQuality.cs" />
     <Compile Include="Web\1IWebReaderManager.cs" />
     <Compile Include="Web\1WebReaderManagerParameters.cs" />
     <Compile Include="Web\ClientReader\HttpClientExtensions.cs" />
