--- a/LiteTube.StreamVideo/LiteTube.StreamVideo.csproj
+++ b/LiteTube.StreamVideo/LiteTube.StreamVideo.csproj
@@ -332,18 +332,18 @@
     <Compile Include="Platform\TsMediaStreamSource.cs" />
     <Compile Include="PlaybackSession.cs" />
     <Compile Include="PlaybackSessionBase.cs" />
-    <Compile Include="Playlists\IProgram.cs" />
-    <Compile Include="Playlists\IProgramManager.cs" />
-    <Compile Include="Playlists\IProgramStream.cs" />
-    <Compile Include="Playlists\ISubProgram.cs" />
-    <Compile Include="Playlists\MediaTrack.cs" />
-    <Compile Include="Playlists\PlaylistDefaults.cs" />
-    <Compile Include="Playlists\PlaylistSubProgram.cs" />
-    <Compile Include="Playlists\PlaylistSubStream.cs" />
-    <Compile Include="Playlists\Program.cs" />
-    <Compile Include="Playlists\SubProgram.cs" />
-    <Compile Include="Playlists\SubStream.cs" />
-    <Compile Include="Playlists\SubStreamSegment.cs" />
+    <Compile Include="Program\IProgram.cs" />
+    <Compile Include="Program\IProgramManager.cs" />
+    <Compile Include="Program\IProgramStream.cs" />
+    <Compile Include="Program\ISubProgram.cs" />
+    <Compile Include="Program\MediaTrack.cs" />
+    <Compile Include="Program\PlaylistDefaults.cs" />
+    <Compile Include="Program\PlaylistSubProgram.cs" />
+    <Compile Include="Program\PlaylistSubStream.cs" />
+    <Compile Include="Program\Program.cs" />
+    <Compile Include="Program\SubProgram.cs" />
+    <Compile Include="Program\SubStream.cs" />
+    <Compile Include="Program\SubStreamSegment.cs" />
     <Compile Include="Pls\IPlsSegmentManagerPolicy.cs" />
     <Compile Include="Pls\PlsParser.cs" />
     <Compile Include="Pls\PlsSegmentManagerFactory.cs" />
